fix transition hero - powered by section

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         /* Backed By Section */
         .backed-by-section {
             padding: 4rem 2rem;
-            background: linear-gradient(180deg, #334155 0%, #1e293b 100%);
+            background: linear-gradient(180deg, #2d1b69 0%, #1e293b 100%);
             text-align: center;
         }
 
