add logo to top; resize contact us btn

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 700;
-            background: linear-gradient(135deg, #00d4ff, #9333ea);
+            background-image: url("assets/images/landing/header_logo.webp");
+            /*background: linear-gradient(135deg, #00d4ff, #9333ea);*/
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -58,6 +59,7 @@
             padding: 0.5rem 1rem;
             border-radius: 8px;
             transition: all 0.3s ease;
+            font-size: 1.2rem
         }
 
         .nav-link:hover {
