--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         .logo {
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            height: 7vh;
+        }
+
+        .logo img {
+            height: 8vh;
         }
 
         .nav-link {
@@ -487,7 +490,7 @@
     <header class="header">
         <nav class="nav">
             <div class="logo">
-                <img src="assets/image/landing/header_logo.webp"/>
+                <img src="assets/images/landing/header_logo.webp"/>
             </div>
             <a href="#contact" class="nav-link">Contact Us</a>
         </nav>
