break line in hero text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHRONOS - The Future of Trading, Reimagined</title>
+    <title>CHRONOS - The Future of Trading<br>, Reimagined</title>
     <style>
         * {
             margin: 0;
