center icons in rewards flashcards

--- a/index.html
+++ b/index.html
@@ -235,6 +235,12 @@
             box-shadow: 0 10px 40px rgba(0, 212, 255, 0.1);
         }
 
+
+        .feature-icon-wrapper {
+            display: flex;
+            justify-content: center;
+        }
+
         .feature-icon {
             width: 60px;
             height: 60px;
@@ -533,19 +539,25 @@
 
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon">🎁</div>
+                    <div class="feature-icon-wrapper">
+                        <div class="feature-icon">🎁</div>
+                    </div>
                     <h3>Rewards</h3>
                     <p>Earn highly unlocked on-chain real rewards - from bounty prizes to exclusive perks. Finally, a DEX that rewards your activity instead of just taking fees.</p>
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon">🎮</div>
+                    <div class="feature-icon-wrapper">
+                        <div class="feature-icon">🎮</div>
+                    </div>
                     <h3>Gamification</h3>
                     <p>Beyond traditional trading lies real connections - battle new challenges with your crew, and tap deeper to swing with systems that excite from social gaming to competitive trading adventures.</p>
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon">👥</div>
+                    <div class="feature-icon-wrapper">
+                        <div class="feature-icon">👥</div>
+                    </div>
                     <h3>Social Community</h3>
                     <p>Building authentic trading communities through competitive matchmaking, team-based battles, and social recognition systems that transform individual trading into collaborative and exciting workouts.</p>
                 </div>
