--- a/index.html
+++ b/index.html
@@ -380,6 +380,13 @@
             align-items: center;
             gap: 1.5rem;
             transition: transform 0.3s ease;
+
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 16px;
+            padding: 2rem;
+            transition: all 0.3s ease;
+            backdrop-filter: blur(10px);
         }
 
         .stat-item:hover {
