make stats items container wider

--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
             margin: 0 auto;
         }
 
+        .container-wide {
+            width:100vw;
+        }
+
         .section-title {
             font-size: 2.5rem;
             font-weight: 700;
@@ -639,7 +643,7 @@
 
     <!-- Stats Section -->
     <section class="stats-section">
-        <div class="container">
+        <div class="container-wide">
             <div class="stats-grid">
                 <div class="stat-item">
                     <div class="stat-icon">👥</div>
