--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 3rem;
-            max-width: 800px;
+            max-width: 50vw;
             margin: 0 auto;
         }
 
