--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
         /* Stats Section */
         .stats-section {
             padding: 6rem 2rem;
-            background: linear-gradient(135deg, #8b5cf6 0%, #a855f7 30%, #7c3aed 70%, #00d4ff 100%);
+            background: linear-gradient(180deg, #333, #960FD9);
+            /*background: linear-gradient(135deg, #8b5cf6 0%, #a855f7 30%, #7c3aed 70%, #00d4ff 100%);*/
             text-align: center;
             position: relative;
         }
@@ -385,7 +386,7 @@
             gap: 1.5rem;
             transition: transform 0.3s ease;
 
-            background: rgba(255, 255, 255, 0.05);
+            background: linear-gradient(to bottom, rgba(61, 44, 62, 0.1), rgba(170, 0, 204, 0.18))
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 16px;
             padding: 2rem;
