--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             gap: 1.5rem;
             transition: transform 0.3s ease;
 
-            background: linear-gradient(to bottom, rgba(61, 44, 62, 0.1), rgba(170, 0, 204, 0.18))
+            background: linear-gradient(to bottom, rgba(61, 44, 62, 0.1), rgba(170, 0, 204, 0.18));
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 16px;
             padding: 2rem;
