update gamification section

--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                 <div class="gamification-content">
                     <h3>Level Up Your Trading</h3>
                     <p>Unlock achievements, earn badges, and compete with traders worldwide in our gamified ecosystem.</p>
-                    
+
                     <div class="badges-preview">
                         <div class="badge">
                             <div class="badge-icon">🏆</div>
@@ -921,18 +921,28 @@
                         </div>
                         <div class="badge">
                             <div class="badge-icon">⚡</div>
-                            <div class="badge-name">Speed Demon</div>
+                            <div class="badge-name">Rampage</div>
                             <div class="badge-desc">Execute 10 trades in under 60 seconds</div>
                         </div>
                         <div class="badge">
                             <div class="badge-icon">💎</div>
-                            <div class="badge-name">Diamond Hands</div>
+                            <div class="badge-name">Camper</div>
                             <div class="badge-desc">Hold a position for 30+ days</div>
                         </div>
                         <div class="badge">
                             <div class="badge-icon">🎯</div>
-                            <div class="badge-name">Sniper</div>
+                            <div class="badge-name">Headshot</div>
                             <div class="badge-desc">Hit 5 consecutive profitable trades</div>
+                        </div>
+                        <div class="badge">
+                            <div class="badge-icon">👾</div>
+                            <div class="badge-name">Killing Spree</div>
+                            <div class="badge-desc">Hit 10 consecutive profitable trades</div>
+                        </div>
+                        <div class="badge">
+                            <div class="badge-icon">🤖</div>
+                            <div class="badge-name">Bot</div>
+                            <div class="badge-desc">Hit 20 consecutive profitable trades</div>
                         </div>
                     </div>
                 </div>
