add hacken svg; include backed by hacken in landing

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         }
 
         /* Backed By Section */
-        .backed-by-section {
+        .backed-by-container{
             padding: 4rem 2rem;
             background: linear-gradient(180deg, #2d1b69 0%, #1e293b 100%);
             text-align: center;
@@ -822,14 +822,11 @@
             <h1>The Future of Trading, Reimagined</h1>
             <p class="hero-subtitle">Fast. Social. Rewarding.</p>
             <a href="#" class="cta-button">Coming Soon</a>
-        </div>
-    </section>
 
-    <!-- Backed By Section -->
-    <section class="backed-by-section">
-        <div class="container">
-            <h3>Backed By</h3>
-            <p>X, Y, Z</p>
+            <div class="backed-by-container">
+                <h3>Backed By</h3>
+                <img src="assets/images/landing/hacken.svg"/>
+            </div>
         </div>
     </section>
 
