--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         }
 
         .backed-by-container h3 {
-            font-size: 1rem;
+            font-size: 0.75rem;
             color: #a0a0a0;
             margin-bottom: 1rem;
             text-transform: uppercase;
@@ -143,6 +143,11 @@
 
         .backed-by-container img {
             margin-top: 0.5rem;
+        }
+
+        .backed-by-logos {
+            padding: 0rem 1rem;
+            display: flex;
         }
 }
 
@@ -837,7 +842,11 @@
         </div>
         <div class="backed-by-container">
             <h3>Backed By</h3>
-            <img src="assets/images/landing/hacken.svg"/>
+            <div class="backed-by-logos">
+                <img src="assets/images/landing/hacken.svg"/>
+                <img src="assets/images/landing/solana.svg"/>
+                <img src="assets/images/landing/minera_ai.svg"/>
+            </div>
         </div>
     </section>
 
