--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         /* Backed By Section */
         .backed-by-container{
-            margin-top: 2rem
+            margin-top: 2rem;
             text-align: center;
         }
 
