--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
         .backed-by-container{
             margin-top: 2rem;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            justify-content: center;
         }
 
         .backed-by-container h3 {
@@ -141,14 +145,18 @@
             color: #ffffff;
         }
 
-        .backed-by-container img {
-            margin-top: 0.5rem;
-        }
-
         .backed-by-logos {
             padding: 0rem 1rem;
             display: flex;
+            width: 100%;
         }
+
+        .backed-by-container img {
+            margin-top: 0.5rem;
+            height: 38px;
+            width: 93px;
+        }
+
 }
 
         /* Trading Video Section */
