wrap backed-by imgs in divs

--- a/index.html
+++ b/index.html
@@ -851,9 +851,15 @@
         <div class="backed-by-container">
             <h3>Backed By</h3>
             <div class="backed-by-logos">
-                <img src="assets/images/landing/hacken.svg"/>
-                <img src="assets/images/landing/solana.svg"/>
-                <img src="assets/images/landing/minera_ai.svg"/>
+                <div>
+                    <img src="assets/images/landing/hacken.svg"/>
+                </div>
+                <div>
+                    <img src="assets/images/landing/solana.svg"/>
+                </div>
+                <div>
+                    <img src="assets/images/landing/minera_ai.svg"/>
+                </div>
             </div>
         </div>
     </section>
