--- a/index.html
+++ b/index.html
@@ -148,13 +148,11 @@
         .backed-by-logos {
             padding: 0rem 1rem;
             display: flex;
-            width: 100%;
+            justify-content: center;
         }
 
         .backed-by-container img {
             margin-top: 0.5rem;
-            height: 38px;
-            width: 93px;
         }
 
 }
