try images alone again in backed by

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
         .backed-by-container{
             margin-top: 2rem;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
         }
 
         .backed-by-container h3 {
@@ -847,15 +850,9 @@
         <div class="backed-by-container">
             <h3>Backed By</h3>
             <div class="backed-by-logos">
-                <div>
-                    <img src="assets/images/landing/hacken.svg"/>
-                </div>
-                <div>
-                    <img src="assets/images/landing/solana.svg"/>
-                </div>
-                <div>
-                    <img src="assets/images/landing/minera_ai.svg"/>
-                </div>
+                <img src="assets/images/landing/hacken.svg"/>
+                <img src="assets/images/landing/solana.svg"/>
+                <img src="assets/images/landing/minera_ai.svg"/>
             </div>
         </div>
     </section>
