fixed backed logo img dimensions:

--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
 
         .backed-by-container img {
             margin-top: 0.5rem;
+            height: 38px;
+            width: 93px;
         }
 
         /* Trading Video Section */
