--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             padding: 0rem 1rem;
             display: flex;
             justify-content: center;
+            gap: 1rem;
         }
 
         .backed-by-container img {
