--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
 
     <!-- Trading Video Showcase -->
     <section class="trading-showcase">
-        div class="video-container">
+        <div class="video-container">
             <div class="ambient-glow"></div>
             <div class="fluid-frame">
                 <div class="stream stream-1"></div>
