--- a/index.html
+++ b/index.html
@@ -184,232 +184,12 @@
         .video-placeholder {
             width: 100%;
             height: 100%;
-            background: #2a2a2a;
-            border-radius: 12px;
+            background: linear-gradient(135deg, #1a1a1a, #2a2a2a);
             display: flex;
-            justify-content: center;
             align-items: center;
-            color: #888;
-            font-size: 18px;
-            z-index: 10;
-            position: relative;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-        }
-
-        .fluid-frame {
-            position: absolute;
-            top: -20px;
-            left: -20px;
-            right: -20px;
-            bottom: -20px;
-            border-radius: 20px;
-            overflow: hidden;
-            z-index: 1;
-        }
-
-        .stream {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border-radius: 20px;
-        }
-
-        .stream::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            border: 16px solid transparent;
-            border-radius: 20px;
-            background: linear-gradient(
-                45deg,
-                transparent 30%,
-                rgba(170, 0, 204, 0.8) 35%,
-                rgba(255, 50, 200, 0.9) 40%,
-                rgba(150, 15, 217, 0.8) 45%,
-                transparent 50%,
-                transparent 80%,
-                rgba(100, 200, 255, 0.7) 85%,
-                rgba(170, 0, 204, 0.8) 90%,
-                transparent 95%
-            );
-            background-size: 200% 200%;
-            mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-            mask-composite: xor;
-            -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-            -webkit-mask-composite: xor;
-            animation: flowStream 8s ease-in-out infinite;
-            filter: blur(0.5px);
-        }
-
-        .stream-1 {
-            animation: waveMotion1 12s ease-in-out infinite;
-        }
-
-        .stream-2 {
-            animation: waveMotion2 10s ease-in-out infinite reverse;
-            opacity: 0.8;
-        }
-
-        .stream-3 {
-            animation: waveMotion3 14s ease-in-out infinite;
-            opacity: 0.6;
-        }
-
-        @keyframes flowStream {
-            0%, 100% { 
-                background-position: 0% 0%;
-                transform: scale(1);
-            }
-            25% { 
-                background-position: 100% 50%;
-                transform: scale(1.02);
-            }
-            50% { 
-                background-position: 200% 100%;
-                transform: scale(0.98);
-            }
-            75% { 
-                background-position: 300% 150%;
-                transform: scale(1.01);
-            }
-        }
-
-        @keyframes waveMotion1 {
-            0%, 100% { 
-                transform: rotate(0deg) scale(1);
-                border-radius: 20px;
-            }
-            25% { 
-                transform: rotate(90deg) scale(1.05);
-                border-radius: 25px 15px 25px 15px;
-            }
-            50% { 
-                transform: rotate(180deg) scale(0.95);
-                border-radius: 15px 25px 15px 25px;
-            }
-            75% { 
-                transform: rotate(270deg) scale(1.02);
-                border-radius: 30px 10px 30px 10px;
-            }
-        }
-
-        @keyframes waveMotion2 {
-            0%, 100% { 
-                transform: rotate(0deg) scale(1.02);
-                border-radius: 25px 15px 25px 15px;
-            }
-            33% { 
-                transform: rotate(120deg) scale(0.98);
-                border-radius: 10px 30px 10px 30px;
-            }
-            66% { 
-                transform: rotate(240deg) scale(1.04);
-                border-radius: 35px 5px 35px 5px;
-            }
-        }
-
-        @keyframes waveMotion3 {
-            0%, 100% { 
-                transform: rotate(0deg) scale(0.96);
-                border-radius: 15px 25px 15px 25px;
-            }
-            20% { 
-                transform: rotate(72deg) scale(1.06);
-                border-radius: 40px 20px 40px 20px;
-            }
-            40% { 
-                transform: rotate(144deg) scale(0.94);
-                border-radius: 20px 40px 20px 40px;
-            }
-            60% { 
-                transform: rotate(216deg) scale(1.08);
-                border-radius: 5px 35px 5px 35px;
-            }
-            80% { 
-                transform: rotate(288deg) scale(0.92);
-                border-radius: 30px 10px 30px 10px;
-            }
-        }
-
-        /* Additional flowing particles */
-        .particle {
-            position: absolute;
-            width: 4px;
-            height: 4px;
-            background: rgba(170, 0, 204, 0.8);
-            border-radius: 50%;
-            z-index: 5;
-        }
-
-        .particle-1 {
-            top: 10%;
-            left: 0;
-            animation: particleFlow1 6s ease-in-out infinite;
-        }
-
-        .particle-2 {
-            top: 50%;
-            right: 0;
-            animation: particleFlow2 8s ease-in-out infinite;
-        }
-
-        .particle-3 {
-            bottom: 10%;
-            left: 50%;
-            animation: particleFlow3 7s ease-in-out infinite;
-        }
-
-        @keyframes particleFlow1 {
-            0%, 100% { transform: translateX(0) translateY(0) scale(1); opacity: 0; }
-            10% { opacity: 1; }
-            50% { transform: translateX(660px) translateY(20px) scale(1.5); opacity: 0.8; }
-            90% { opacity: 1; }
-        }
-
-        @keyframes particleFlow2 {
-            0%, 100% { transform: translateX(0) translateY(0) scale(1); opacity: 0; }
-            10% { opacity: 1; }
-            50% { transform: translateX(-660px) translateY(-20px) scale(1.2); opacity: 0.6; }
-            90% { opacity: 1; }
-        }
-
-        @keyframes particleFlow3 {
-            0%, 100% { transform: translateX(0) translateY(0) scale(1); opacity: 0; }
-            10% { opacity: 1; }
-            50% { transform: translateX(-100px) translateY(-380px) scale(1.8); opacity: 0.9; }
-            90% { opacity: 1; }
-        }
-
-        /* Ambient glow effect */
-        .ambient-glow {
-            position: absolute;
-            top: -30px;
-            left: -30px;
-            right: -30px;
-            bottom: -30px;
-            background: radial-gradient(
-                ellipse at center,
-                rgba(170, 0, 204, 0.15) 0%,
-                rgba(150, 15, 217, 0.1) 30%,
-                transparent 70%
-            );
-            border-radius: 50px;
-            animation: ambientPulse 6s ease-in-out infinite;
-            z-index: 0;
-        }
-
-        @keyframes ambientPulse {
-            0%, 100% { 
-                transform: scale(1);
-                opacity: 0.6;
-            }
-            50% { 
-                transform: scale(1.1);
-                opacity: 1;
-            }
+            justify-content: center;
+            color: #666;
+            font-size: 1.2rem;
         }
 
         /* Tabbed Features Section */
@@ -1082,18 +862,9 @@
 
     <!-- Trading Video Showcase -->
     <section class="trading-showcase">
-        <div class="video-container">
-            <div class="ambient-glow"></div>
-            <div class="fluid-frame">
-                <div class="stream stream-1"></div>
-                <div class="stream stream-2"></div>
-                <div class="stream stream-3"></div>
-            </div>
-            <div class="particle particle-1"></div>
-            <div class="particle particle-2"></div>
-            <div class="particle particle-3"></div>
+        <div class="trading-video">
             <div class="video-placeholder">
-                Your Demo Video Here
+                App Demo Video Placeholder
             </div>
         </div>
     </section>
