--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             width: 93px;
         }
 
-        /* Trading Video Section */
+        /* Trading Video Section --- OLD
         .trading-showcase {
             padding: 6rem 2rem;
             background: linear-gradient(180deg, #1e293b 0%, #0f172a 100%);
@@ -190,7 +190,287 @@
             justify-content: center;
             color: #666;
             font-size: 1.2rem;
-        }
+        } */
+
+        /******************** NEW VIDEO EFFECTS ATTEMPT ******************/
+
+        /* Trading Video Section */
+.trading-showcase {
+    padding: 6rem 2rem;
+    background: linear-gradient(180deg, #1e293b 0%, #0f172a 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.trading-video {
+    max-width: 800px;
+    width: 100%;
+    height: 400px;
+    background: #000;
+    border-radius: 20px;
+    position: relative;
+    overflow: visible; /* Changed from hidden to show the fluid effects */
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    z-index: 10;
+}
+
+.video-placeholder {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #1a1a1a, #2a2a2a);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #666;
+    font-size: 1.2rem;
+    border-radius: 18px; /* Slightly smaller to account for the border */
+    position: relative;
+    z-index: 15;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+}
+
+/* Fluid Frame Effects */
+.fluid-frame {
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    right: -20px;
+    bottom: -20px;
+    border-radius: 20px;
+    overflow: hidden;
+    z-index: 5;
+}
+
+.stream {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+.stream::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border: 16px solid transparent;
+    border-radius: 20px;
+    background: linear-gradient(
+        45deg,
+        transparent 30%,
+        rgba(59, 130, 246, 0.8) 35%,     /* Blue theme to match your design */
+        rgba(147, 51, 234, 0.9) 40%,     /* Purple accent */
+        rgba(79, 70, 229, 0.8) 45%,      /* Indigo */
+        transparent 50%,
+        transparent 80%,
+        rgba(34, 197, 94, 0.7) 85%,      /* Green accent */
+        rgba(59, 130, 246, 0.8) 90%,     /* Back to blue */
+        transparent 95%
+    );
+    background-size: 200% 200%;
+    mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    mask-composite: xor;
+    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    animation: flowStream 8s ease-in-out infinite;
+    filter: blur(0.5px);
+}
+
+.stream-1 {
+    animation: waveMotion1 12s ease-in-out infinite;
+}
+
+.stream-2 {
+    animation: waveMotion2 10s ease-in-out infinite reverse;
+    opacity: 0.8;
+}
+
+.stream-3 {
+    animation: waveMotion3 14s ease-in-out infinite;
+    opacity: 0.6;
+}
+
+/* Animation Keyframes */
+@keyframes flowStream {
+    0%, 100% {
+        background-position: 0% 0%;
+        transform: scale(1);
+    }
+    25% {
+        background-position: 100% 50%;
+        transform: scale(1.02);
+    }
+    50% {
+        background-position: 200% 100%;
+        transform: scale(0.98);
+    }
+    75% {
+        background-position: 300% 150%;
+        transform: scale(1.01);
+    }
+}
+
+@keyframes waveMotion1 {
+    0%, 100% {
+        transform: rotate(0deg) scale(1);
+        border-radius: 20px;
+    }
+    25% {
+        transform: rotate(90deg) scale(1.05);
+        border-radius: 25px 15px 25px 15px;
+    }
+    50% {
+        transform: rotate(180deg) scale(0.95);
+        border-radius: 15px 25px 15px 25px;
+    }
+    75% {
+        transform: rotate(270deg) scale(1.02);
+        border-radius: 30px 10px 30px 10px;
+    }
+}
+
+@keyframes waveMotion2 {
+    0%, 100% {
+        transform: rotate(0deg) scale(1.02);
+        border-radius: 25px 15px 25px 15px;
+    }
+    33% {
+        transform: rotate(120deg) scale(0.98);
+        border-radius: 10px 30px 10px 30px;
+    }
+    66% {
+        transform: rotate(240deg) scale(1.04);
+        border-radius: 35px 5px 35px 5px;
+    }
+}
+
+@keyframes waveMotion3 {
+    0%, 100% {
+        transform: rotate(0deg) scale(0.96);
+        border-radius: 15px 25px 15px 25px;
+    }
+    20% {
+        transform: rotate(72deg) scale(1.06);
+        border-radius: 40px 20px 40px 20px;
+    }
+    40% {
+        transform: rotate(144deg) scale(0.94);
+        border-radius: 20px 40px 20px 40px;
+    }
+    60% {
+        transform: rotate(216deg) scale(1.08);
+        border-radius: 5px 35px 5px 35px;
+    }
+    80% {
+        transform: rotate(288deg) scale(0.92);
+        border-radius: 30px 10px 30px 10px;
+    }
+}
+
+/* Flowing Particles */
+.particle {
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    background: rgba(59, 130, 246, 0.8);
+    border-radius: 50%;
+    z-index: 8;
+}
+
+.particle-1 {
+    top: 10%;
+    left: 0;
+    animation: particleFlow1 6s ease-in-out infinite;
+}
+
+.particle-2 {
+    top: 50%;
+    right: 0;
+    animation: particleFlow2 8s ease-in-out infinite;
+}
+
+.particle-3 {
+    bottom: 10%;
+    left: 50%;
+    animation: particleFlow3 7s ease-in-out infinite;
+}
+
+@keyframes particleFlow1 {
+    0%, 100% { transform: translateX(0) translateY(0) scale(1); opacity: 0; }
+    10% { opacity: 1; }
+    50% { transform: translateX(820px) translateY(20px) scale(1.5); opacity: 0.8; }
+    90% { opacity: 1; }
+}
+
+@keyframes particleFlow2 {
+    0%, 100% { transform: translateX(0) translateY(0) scale(1); opacity: 0; }
+    10% { opacity: 1; }
+    50% { transform: translateX(-820px) translateY(-20px) scale(1.2); opacity: 0.6; }
+    90% { opacity: 1; }
+}
+
+@keyframes particleFlow3 {
+    0%, 100% { transform: translateX(0) translateY(0) scale(1); opacity: 0; }
+    10% { opacity: 1; }
+    50% { transform: translateX(-100px) translateY(-420px) scale(1.8); opacity: 0.9; }
+    90% { opacity: 1; }
+}
+
+/* Ambient Glow Effect */
+.ambient-glow {
+    position: absolute;
+    top: -30px;
+    left: -30px;
+    right: -30px;
+    bottom: -30px;
+    background: radial-gradient(
+        ellipse at center,
+        rgba(59, 130, 246, 0.15) 0%,
+        rgba(79, 70, 229, 0.1) 30%,
+        transparent 70%
+    );
+    border-radius: 50px;
+    animation: ambientPulse 6s ease-in-out infinite;
+    z-index: 1;
+}
+
+@keyframes ambientPulse {
+    0%, 100% {
+        transform: scale(1);
+        opacity: 0.6;
+    }
+    50% {
+        transform: scale(1.1);
+        opacity: 1;
+    }
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .trading-video {
+        height: 300px;
+        max-width: 90%;
+    }
+
+    .fluid-frame {
+        top: -15px;
+        left: -15px;
+        right: -15px;
+        bottom: -15px;
+    }
+
+    .ambient-glow {
+        top: -20px;
+        left: -20px;
+        right: -20px;
+        bottom: -20px;
+    }
+}
+        /************************ END VIDEO EFFECTS **********************/
 
         /* Tabbed Features Section */
         .tabbed-features {
