update html sgtructure for video effects

--- a/index.html
+++ b/index.html
@@ -1143,12 +1143,20 @@
     <!-- Trading Video Showcase -->
     <section class="trading-showcase">
         <div class="trading-video">
+            <div class="ambient-glow"></div>
+            <div class="fluid-frame">
+                <div class="stream stream-1"></div>
+                <div class="stream stream-2"></div>
+                <div class="stream stream-3"></div>
+            </div>
+            <div class="particle particle-1"></div>
+            <div class="particle particle-2"></div>
+            <div class="particle particle-3"></div>
             <div class="video-placeholder">
                 App Demo Video Placeholder
             </div>
         </div>
     </section>
-
     <!-- Tabbed Features Section -->
     <section class="tabbed-features">
         <div class="tabs-container">
