add CHRONOSX title

--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
     <!-- Trading Video Showcase -->
     <section class="trading-showcase">
         <div class="trading-title">
-
+            <h1>CHRONOSX</h1>
         </div>
         <div class="trading-video">
             <div class="ambient-glow"></div>
