--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         .hero {
             min-height: 80vh;
             background-image: url("assets/images/landing/hero_background.webp");/*linear-gradient(135deg, #1a0b2e 0%, #4c1d95 20%, #7c3aed 40%, #a855f7 60%, #00d4ff 80%, #0ea5e9 100%);*/
+            background-size: cover;
             display: flex;
             flex-direction: column;
             align-items: center;
