--- a/index.html
+++ b/index.html
@@ -1203,19 +1203,19 @@
                     <div class="podium-container">
                         <div class="podium-tier">
                             <div class="tier-label">Bronze</div>
-                            <div class="podium-step bronze">3</div>
+                            <div class="podium-step bronze">📱🎮</div>
                         </div>
                         <div class="podium-tier">
                             <div class="tier-label">Silver</div>
-                            <div class="podium-step silver">3</div>
+                            <div class="podium-step silver">💻🚲</div>
                         </div>
                         <div class="podium-tier">
                             <div class="tier-label">Gold</div>
-                            <div class="podium-step gold">1</div>
+                            <div class="podium-step gold">🏝️🍹</div>
                         </div>
                         <div class="podium-tier">
                             <div class="tier-label">Platinum</div>
-                            <div class="podium-step platinum">2</div>
+                            <div class="podium-step platinum">🚙</div>
                         </div>
                     </div>
                 </div>
