trading video demo subtitle

--- a/index.html
+++ b/index.html
@@ -189,6 +189,21 @@
     background-clip: text;
 }
 
+.trading-subtitle {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+}
+
+.trading-subtitle h1 {
+    font-size: 2vw;
+    font-weight: 800;
+    margin-bottom: 1.5rem;
+    background: linear-gradient(90deg, #9300AD, #8000ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
 .trading-video {
     max-width: 800px;
     width: 100%;
@@ -1151,6 +1166,9 @@
                 App Demo Video Placeholder
             </div>
         </div>
+        <div class="trading-subtitle">
+            <h1>Buy ETH, BSC, Base & Arbitrum tokens using only Solana - no bridging needed</h1>
+        </div>
     </section>
     <!-- Tabbed Features Section -->
     <section class="tabbed-features">
@@ -1197,6 +1215,7 @@
                             <li>Community recognition badges</li>
                             <li>Monthly bonus distributions</li>
                             <li>VIP trading tournaments</li>
+                            <li>Achieve lower transaction fees</li>
                         </ul>
                     </div>
 
