--- a/index.html
+++ b/index.html
@@ -860,8 +860,8 @@
         }
 
         .feature-icon {
-            width: 60px;
-            height: 60px;
+            width: 200px;
+            height: 200px;
             background: linear-gradient(135deg, #00d4ff, #9333ea);
             border-radius: 12px;
             display: flex;
@@ -1293,19 +1293,19 @@
 
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon">🎁</div>
+                    <div class="feature-icon"><img src="assets/images/landing/ghost_wallet.png" /></div>
                     <h3>Rewards</h3>
                     <p>Earn highly unlocked on-chain real rewards - from bounty prizes to exclusive perks. Finally, a DEX that rewards your activity instead of just taking fees.</p>
                 </div>
-                
+
                 <div class="feature-card">
-                    <div class="feature-icon">🎮</div>
+                    <div class="feature-icon"><img src="assets/images/landing/coins.png" /></div>
                     <h3>Gamification</h3>
                     <p>Beyond traditional trading lies real connections - battle new challenges with your crew, and tap deeper to swing with systems that excite from social gaming to competitive trading adventures.</p>
                 </div>
-                
+
                 <div class="feature-card">
-                    <div class="feature-icon">👥</div>
+                    <div class="feature-icon"><img src="assets/images/landing/solana.png" /></div>
                     <h3>Social Community</h3>
                     <p>Building authentic trading communities through competitive matchmaking, team-based battles, and social recognition systems that transform individual trading into collaborative and exciting workouts.</p>
                 </div>
