Features descriptions & titles updated

--- a/index.html
+++ b/index.html
@@ -1286,28 +1286,28 @@
     <section class="features">
         <div class="container">
             <div class="features-header">
-                <h2 class="section-title">New Age of DeFi</h2>
-                <p class="features-pretitle">Real Trading, Real Rewards</p>
-                <p class="features-subtitle">Simple. Bold</p>
+                <h2 class="section-title">Architecture</h2>
+                <p class="features-pretitle">Non-custodial design</p>
+                <p class="features-subtitle">We built what we couldn't find: a platform where security and ownership come first. Your assets remain 100% on-chain across multiple blockchains through our non-custodial architecture.</p>
             </div>
 
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon"><img src="assets/images/landing/ghost_wallet.png" /></div>
-                    <h3>Rewards</h3>
-                    <p>Earn highly unlocked on-chain real rewards - from bounty prizes to exclusive perks. Finally, a DEX that rewards your activity instead of just taking fees.</p>
+                    <h3>Transparency First</h3>
+                    <p>Public Founder with Professional Sport Careers - Real Names, Real Accountability.</p>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon"><img src="assets/images/landing/coins.png" /></div>
-                    <h3>Gamification</h3>
-                    <p>Beyond traditional trading lies real connections - battle new challenges with your crew, and tap deeper to swing with systems that excite from social gaming to competitive trading adventures.</p>
+                    <h3>Non-Custodial by Design</h3>
+                    <p>Assets remain fully on-chain and always user-controlled - Delivering true Piece of mind in a space full of uncertainty</p>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon"><img src="assets/images/landing/solana.png" /></div>
-                    <h3>Social Community</h3>
-                    <p>Building authentic trading communities through competitive matchmaking, team-based battles, and social recognition systems that transform individual trading into collaborative and exciting workouts.</p>
+                    <h3>Audited architecture with protocol-grade security</h3>
+                    <p>Engineered for resilience at every layer – from smart contracts to cross-chain infrastructure<br>Audited by Hacken.io </p>
                 </div>
             </div>
         </div>
