How CHRONOS works section

--- a/index.html
+++ b/index.html
@@ -845,6 +845,7 @@
             padding: 2rem;
             transition: all 0.3s ease;
             backdrop-filter: blur(10px);
+            align-content: center;
         }
 
         .feature-card:hover {
@@ -868,7 +869,12 @@
             align-items: center;
             justify-content: center;
             margin-bottom: 1.5rem;
+            margin-left: 1rem;
             font-size: 1.5rem;
+        }
+
+        .feature-icon img {
+            height: 190px;
         }
 
         .feature-card h3 {
@@ -1286,28 +1292,23 @@
     <section class="features">
         <div class="container">
             <div class="features-header">
-                <h2 class="section-title">Architecture</h2>
-                <p class="features-pretitle">Non-custodial design</p>
-                <p class="features-subtitle">We built what we couldn't find: a platform where security and ownership come first. Your assets remain 100% on-chain across multiple blockchains through our non-custodial architecture.</p>
+                <h2 class="section-title">How CHRONOS Works</h2>
             </div>
 
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon"><img src="assets/images/landing/ghost_wallet.png" /></div>
-                    <h3>Transparency First</h3>
-                    <p>Public Founder with Professional Sport Careers - Real Names, Real Accountability.</p>
+                    <h3>Connect any crypto wallet</h3>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon"><img src="assets/images/landing/coins.png" /></div>
-                    <h3>Non-Custodial by Design</h3>
-                    <p>Assets remain fully on-chain and always user-controlled - Delivering true Piece of mind in a space full of uncertainty</p>
+                    <h3>Set orders, customize transaction fees and optimize execution</h3>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon"><img src="assets/images/landing/solana.png" /></div>
-                    <h3>Audited architecture with protocol-grade security</h3>
-                    <p>Engineered for resilience at every layer – from smart contracts to cross-chain infrastructure<br>Audited by Hacken.io </p>
+                    <h3>Buy, sell, and monitor performance in real time</h3>
                 </div>
             </div>
         </div>
