update architecture section

--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
         /* Protection Section */
         .protection-section {
             padding: 6rem 2rem;
-            background: linear-gradient(180deg, #4c1d95 0%, #6d28d9 30%, #7c3aed 70%, #8b5cf6 100%);
+            background: linear-gradient(180deg, #000 0%, #230448 50%, #190045 80%, #0f172a 100%);
         }
 
         .protection-grid {
@@ -1144,7 +1144,7 @@
 
         </div>
         <div class="backed-by-container">
-            <h3>Backed By</h3>
+            <h3>Built on</h3>
             <div class="backed-by-logos">
                 <img src="assets/images/landing/hacken.svg"/>
                 <img src="assets/images/landing/solana.svg"/>
@@ -1317,18 +1317,23 @@
     <!-- Protection Section -->
     <section class="protection-section">
         <div class="container">
-            <h2 class="section-title">Decentralized by Design</h2>
-            <p class="section-subtitle">We build on a custodial-free platform where security and ownership come first. Your assets remain 100% on-chain across multiple blockchains through our non-custodial architecture.</p>
+            <h2 class="section-title">Architecture</h2>
+            <p class="section-subtitle">We built what we couldn't find: a platform where security and ownership come first. Your assets remain 100% on-chain across multiple blockchains through our non-custodial architectur</p>
 
             <div class="protection-grid">
                 <div class="protection-item">
-                    <h3>Public Founders with Professional Sport Careers</h3>
-                    <p>Real names, real accountability</p>
+                    <h3>Transparency First</h3>
+                    <p>Public Founders with Professional Sport Careers - Real names, real accountability</p>
                 </div>
 
                 <div class="protection-item">
-                    <h3>Non-Custodial</h3>
-                    <p>True peace of mind in a space full of uncertainty</p>
+                    <h3>Non-Custodial by Design</h3>
+                    <p>Assets remain fully on-chain and always user-controlled - Delivering true Piece of mind in a space full of uncertainty</p>
+                </div>
+
+                <div class="protection-item">
+                    <h3>Audited architecture with protocol-grade security</h3>
+                    <p>Engineered for resilience at every layer – from smart contracts to cross-chain infrastructure. Audited by Hacken.io</p>
                 </div>
 
                 <div class="protection-item">
